crates/credential/tests/probes/capability_subtrait_dynamic_no_method.stderr
error[E0046]: not all trait items implemented, missing: `release`
  --> tests/probes/capability_subtrait_dynamic_no_method.rs:54:1
   |
54 | impl Dynamic for Dummy {}
   | ^^^^^^^^^^^^^^^^^^^^^^ missing `release` in implementation
   |
   = help: implement the missing item: `fn release(_: &<Self as Credential>::State, _: &CredentialContext) -> impl Future<Output = Result<(), CredentialError>> + Send { todo!() }`
